# legal-ai-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/core-api/: Dockerfile  alembic.ini  pyproject.toml
apps/core-api/alembic/: env.py
apps/core-api/alembic/versions/: 20260225_0001_initial.py  20260225_0002_pgvector.py  (+9 more)
apps/core-api/core_api/: alerts.py  audit.py  auth.py  cli.py  config.py  db.py  idempotency.py  main.py  models.py  post_feedback.py  reader_metrics.py  schemas.py  security.py
apps/core-api/tests/: test_claim_and_recovery.py  test_health.py  test_leads_api.py  test_models.py  test_ops_endpoints.py  test_post_feedback.py  test_reader_api.py  test_security.py  test_users_api.py
apps/lead-bot/: Dockerfile  pyproject.toml
apps/lead-bot/lead_bot/: buffer.py  core_client.py  logging_config.py  run.py  settings.py
apps/lead-bot/legacy/: .env.example  .gitignore  Dockerfile  LEADS_CHAT_SETUP.md  README.md  SSH_SETUP.md  TESTING_RESULTS.md  admin_interface.py  ai_brain.py  bot.py  claude.md  config.py  content.py  core_api_bridge.py  database.py  deploy.sh  email_sender.py  funnel.py  handlers.py  knowledge_engine.py  lead_qualifier.py  prompts.py  pytest.ini  requirements.txt  security.py  start.sh  telegram_ui.py  test_bot.py  test_complete_responses.py  test_security_integration.py  test_uniqueness.py  u - postgres -c "psql << 'EOF'  utils.py  НАСТРОЙКА_ЧАТА_ДЛЯ_ЛИДОВ.md
apps/news/: Dockerfile  pyproject.toml
apps/news/legacy/: .env.example  .git-trigger  .gitignore  .vercel-build-trigger  API_COST_TRACKING_SETUP.md  CREATE_PR.md  CREATE_PR_MINI_APP_FIX.md  CREATE_PR_SESSION_16.md  CREATE_PR_SESSION_17.md  Dockerfile  Dockerfile.reader  OPEN_DEBUG_PAGE.md  PRODUCTION_DEPLOYMENT.md  PR_ANALYTICS.md  PR_DESCRIPTION.md  QUICK_START.md  READER_BOT_SETUP.md  README.md  SESSION_15_SUMMARY.md  TECHNICAL_REQUIREMENTS.md  TELEGRAM_INTEGRATION_SUMMARY.md  TELEGRAM_SETUP.md  WORKFLOW_TROUBLESHOOTING.md  check_workflow_status.py  create_template.py  docker-compose.production.yml  docker-compose.yml  init_db.sql  requirements.reader.txt  requirements.txt  setup_telegram.sh  setup_telegram_session.py
apps/news/news/: __init__.py  admin_bot.py  control_plane.py  core_client.py  feedback.py  generate.py  generate_loop.py  llm_writer.py  logging_config.py  pipeline.py  publish.py  publish_loop.py  rag.py  rss_fetcher.py  settings.py  source_catalog.py  strategy.py  telegram_ingest.py  telegram_ingest_loop.py
apps/news/tests/: test_admin_bot_posts.py  test_control_plane.py  test_feedback.py  test_generate_snippets.py  test_llm_writer.py  test_pipeline.py  test_source_catalog.py  test_strategy.py  test_telegram_ingest_cache.py
(+459 files in other folders)
