[project]
name = "legal-ai-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[tool.uv.workspace]
members = [
    "apps/contract-ai",
    "apps/contract-worker",
    "apps/core-api",
    "apps/lead-bot",
    "apps/news",
    "apps/web",
    "packages/prompts",
    "packages/shared",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "apps/web",
    "apps/lead-bot/legacy",
    "apps/news/legacy",
    "apps/contract-ai",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["apps/core-api", "packages/shared"]
addopts = "-q"
