[project]
name = "core-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "bcrypt>=4.2",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "psutil>=6.1",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core_api"]
