[project]
name = "news"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "requests>=2.32",
    "pydantic-settings>=2.7",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news"]
