[project]
name = "news"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "prompts",
    "requests>=2.32",
    "pydantic-settings>=2.7",
    "openai>=1.0.0",
    "feedparser>=6.0.11",
    "python-telegram-bot>=22.6",
    "telethon>=1.34.0",
    "qrcode>=8.2",
]

[tool.uv.sources]
shared = { workspace = true }
prompts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news"]
